--- a/index.html
+++ b/index.html
@@ -3,33 +3,32 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>portfolio</title>
+    <title>Deepesh Agarwal Portfolio</title>
+    <meta name="description" content="Portfolio of Deepesh Agarwal, full-stack developer.">
+    <meta name="keywords" content="Deepesh Agarwal, portfolio, web developer">
     <link rel="stylesheet" href="style.css">
-    
 </head>
 <body>
-    <h1 id="portfolio">portfolio</h1>
-    <a class="links" href="https://agarwaldeepesh060.github.io/tic-toc-toe/">project1</a>
-    <a class="links" href="https://agarwaldeepesh060.github.io/stone-paper-scissor/">project2</a>
-
+    <h1 id="portfolio">Portfolio</h1>
+    <a class="links" href="https://agarwaldeepesh060.github.io/tic-toc-toe/">Project 1</a>
+    <a class="links" href="https://agarwaldeepesh060.github.io/stone-paper-scissor/">Project 2</a>
 
     <div class="home-img">
         <div class="glowing-circle">
             <span></span>
             <div class="image">
-                <img src="portfolio image.png" alt="portfolio image">
+                <img src="portfolio image.png" alt="Portfolio Image">
             </div>
         </div>
     </div>
-<p class="name">hi i'am deepesh agarwal</p>
-<p id="skill">i'am web developer</p>
-<div class="contact">
-<h1>contact information</h1>
-<div class="information">
-<h2>mobile no: 9784908358</h2>
-<h2>email id:agarwaldeepesh060@gmail.com</h2>
-</div>
-</div>
-
+    <p class="name">Hi, I'm Deepesh Agarwal</p>
+    <p id="skill">I'm a web developer</p>
+    <div class="contact">
+        <h1>Contact Information</h1>
+        <div class="information">
+            <h2>Mobile No: 9784908358</h2>
+            <h2>Email ID: agarwaldeepesh060@gmail.com</h2>
+        </div>
+    </div>
 </body>
 </html>
