--- a/index.html
+++ b/index.html
@@ -10,25 +10,65 @@
 </head>
 <body>
     <h1 id="portfolio">Portfolio</h1>
+    <div class="links-container">
     <a class="links" href="https://agarwaldeepesh060.github.io/tic-toc-toe/">Project 1</a>
     <a class="links" href="https://agarwaldeepesh060.github.io/stone-paper-scissor/">Project 2</a>
-
+    <a class="links" href="https://agarwaldeepesh060.github.io/stone-paper-scissor/">Project 3</a>
+</div>
+<div  class="portfolio-container">
     <div class="home-img">
-        <div class="glowing-circle">
-            <span></span>
-            <div class="image">
-                <img src="portfolio image.png" alt="Portfolio Image">
+        <div class="image">
+                <img src="portfolio_image.png" alt="Portfolio Image">
             </div>
         </div>
-    </div>
-    <p class="name">Hi, I'm Deepesh Agarwal</p>
-    <p id="skill">I'm a web developer</p>
-    <div class="contact">
-        <h1>Contact Information</h1>
+    <div id="skill">
+    <p>hi i'am deepesh Agarwal a full-stack developer who loves building web applications. I specialize in the MERN stack,
+        which includes MongoDB, Express.js, React, and Node.js. I enjoy turning ideas into real projects and creating user-friendly experiences.I have a passion for learning new technologies and solving problems.</p>
+ </div></div>
+<div class="exp">
+<div class="pro"><p><span style="font-size: x-large; color: #3cf;"> PROJECT1:</span>The first project is a Tic Tac Toe game—a simple web-based application showcasing fundamental skills. By using HTML for structure, CSS for design, and JavaScript for interactivity, you can create 
+    a responsive and engaging game that allows users to play and restart with ease. It's an excellent way to practice essential web development skills.
+</p></div>
+
+<div class="pro"><p><span style="font-size: x-large; color: #3cf;"> PROJECT2:</span> The second project is a Stone Paper Scissors game. This web-based game demonstrates skills in HTML, CSS, and JavaScript. The game allows users to choose between stone, paper, or scissors, and the 
+    system generates a random choice to determine the winner. It’s a great project to showcase logic building, user interaction, and game mechanics in web development.</p></div>
+
+<div class="pro"><p><span style="font-size: x-large; color: #3cf;"> PROJECT3:</span>
+    A Password Management System project as a full-stack application involves securely storing, retrieving, and managing users' passwords for various accounts.
+    <br>
+    <span style="font-size: large; color: #3cf;">1. FRONTEND: </span>
+    <br>
+User Interface: A clean, responsive UI for user registration, login, and password vault access.
+<br>
+Features: Users can add, update, and delete account passwords. They can view stored passwords, typically behind a master password or biometric authentication.<br>
+<span style="font-size: large; color: #3cf;">1. BACKEND: </span><br>
+
+Server: Manages user authentication (login/signup), password encryption, and handling of CRUD operations (Create, Read, Update, Delete).
+<br>
+Encryption: Uses encryption algorithms like AES or hashing (bcrypt) to ensure password security.
+<br>
+<span style="font-size: large; color: #3cf;">3. DATABASE:: </span><br>
+
+Stores encrypted passwords, user credentials, and other relevant data (e.g., security questions, metadata).<br>
+<span style="font-size: large; color: #3cf;">4. SECURITY: </span><br>
+
+Employs SSL for secure data transmission.<br>
+Multi-factor authentication (MFA) can be added for an extra security layer.<br>
+<span style="font-size: large; color: #3cf;">5. TECH-STACK </span><br>
+
+Frontend: HTML, CSS, JavaScript (React).<br>
+Backend: Node.js/Express.<br>
+Database: MongoDB.<br>
+</p></div></div>
+
+
+    <div class="info">
+        <h1>Contact Information</h1></div>
         <div class="information">
             <h2>Mobile No: 9784908358</h2>
             <h2>Email ID: agarwaldeepesh060@gmail.com</h2>
         </div>
-    </div>
+        <button id="downloadbtn">download cv</button>
+        <script src="app.js"></script>
 </body>
 </html>
