--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <h1 id="portfolio">Portfolio</h1>
     <div class="links-container">
-    <a class="links" href="https://agarwaldeepesh060.github.io/tic-toc-toe/">Project 1</a>
+    <a class="links" href="https://agarwaldeepesh060.github.io/tic-tac-toe/">Project 1</a>
     <a class="links" href="https://agarwaldeepesh060.github.io/stone-paper-scissor/">Project 2</a>
     <a class="links" href="https://agarwaldeepesh060.github.io/stone-paper-scissor/">Project 3</a>
 </div>
