--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="links-container">
     <a class="links" href="https://agarwaldeepesh060.github.io/tic-tac-toe/">Project 1</a>
     <a class="links" href="https://agarwaldeepesh060.github.io/stone-paper-scissor/">Project 2</a>
-    <a class="links" href="https://agarwaldeepesh060.github.io/stone-paper-scissor/">Project 3</a>
+    <a class="links" href="https://passworrd-management-system-lkttvmspp.vercel.app/">Project 3</a>
 </div>
 <div  class="portfolio-container">
     <div class="home-img">
